--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ configure(allprojects) {
 
 project("online-mall-base") {
     dependencies {
+        compile("org.springframework.boot:spring-boot-starter-data-mongodb")
         compile("mysql:mysql-connector-java")
         compile("org.springframework.boot:spring-boot-starter-data-jpa")
     }
