--- a/build.gradle
+++ b/build.gradle
@@ -33,8 +33,8 @@ configure(allprojects) {
 project("online-mall-base") {
     dependencies {
         compile("org.springframework.boot:spring-boot-starter-data-mongodb")
-        compile("mysql:mysql-connector-java")
-        compile("org.springframework.boot:spring-boot-starter-data-jpa")
+        //compile("mysql:mysql-connector-java")
+        //compile("org.springframework.boot:spring-boot-starter-data-jpa")
     }
 }
 
