--- a/online-mall-web/src/main/resources/application.properties
+++ b/online-mall-web/src/main/resources/application.properties
@@ -8,11 +8,23 @@ spring.thymeleaf.mode=HTML5
 spring.thymeleaf.cache=false
 #thymeleaf end
 
-#datasource start
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://118.89.170.47:3306/vv_maintenance?characterEncoding=utf-8
-spring.datasource.username=vv
-spring.datasource.password=vv123
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-#datasource end
+#mysql start
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://118.89.170.47:3306/vv_maintenance?characterEncoding=utf-8
+#spring.datasource.username=vv
+#spring.datasource.password=vv123
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#mysql end
+
+# MONGODB (MongoProperties)
+#spring.data.mongodb.authentication-database=
+spring.data.mongodb.database=online-mall
+#spring.data.mongodb.field-naming-strategy= com.online.mall.model
+#spring.data.mongodb.grid-fs-database=
+spring.data.mongodb.host=60.205.213.213
+spring.data.mongodb.username=online-mall
+spring.data.mongodb.password=online-mall
+spring.data.mongodb.port=27017
+#spring.data.mongodb.repositories.enabled=true
+#spring.data.mongodb.uri=mongodb://60.205.213.213/admin
