测试类完成

--- a/online-mall-web/src/main/resources/application.properties
+++ b/online-mall-web/src/main/resources/application.properties
@@ -2,11 +2,16 @@ server.port=8080
 server.context-path=/online-mall
 
 #thymeleaf start
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
-spring.thymeleaf.mode=HTML5
-spring.thymeleaf.cache=false
+#spring.thymeleaf.prefix=classpath:/templates/views
+#spring.thymeleaf.suffix=.html
+#spring.thymeleaf.mode=HTML5
+#spring.thymeleaf.cache=false
 #thymeleaf end
+
+#设定ftl文件路径
+spring.freemarker.template-loader-path=classpath:/views
+#设定静态文件路径，js,css等
+spring.mvc.static-path-pattern=/static/**
 
 #mysql start
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
