页面初始化完成

--- a/online-mall-web/src/main/resources/application.properties
+++ b/online-mall-web/src/main/resources/application.properties
@@ -8,10 +8,11 @@ server.context-path=/online-mall
 #spring.thymeleaf.cache=false
 #thymeleaf end
 
-#设定ftl文件路径
+#freemarker start
 spring.freemarker.template-loader-path=classpath:/views
-#设定静态文件路径，js,css等
 spring.mvc.static-path-pattern=/static/**
+spring.freemarker.request-context-attribute=request
+#freemarker end
 
 #mysql start
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
