--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,7 @@
 rootProject.name = 'online-mall'
 
+include 'common-utils'
 include "online-mall-base"
 include "online-mall-service"
 include "online-mall-web"
+
